# NovacPPP

./: .gitignore  .gitmodules  CMakeLists.txt  ContinuationOfProcessing.cpp  ContinuationOfProcessing.h  Copy of VolcanoInfo.cpp  Copy of VolcanoInfo.h  FileInfo.cpp  FileInfo.h  FileTreeCtrl.cpp  MainFrm.cpp  MainFrm.h  Mattias ToDo List.txt.txt  MattiasWorkLog.rtf  Molecule.h  NovacPPP.aps  NovacPPP.cpp  NovacPPP.h  NovacPPP.rc  NovacPPP.sln  NovacPPP.vcproj  NovacPPP.vcxproj  NovacPPP.vcxproj.filters  NovacPPPDlg.cpp  ObservatoryInfo.h  PostProcessing.cpp  PostProcessing.h  PostProcessingStatistics.cpp  PostProcessingStatistics.h  ProcessingStatistics.txt  README.md  ReadMe.txt  SetupFileReader.cpp  SetupFileReader.h  StatusLogFileWriter.cpp  StatusLogFileWriter.h  StringTokenizer.cpp  StringTokenizer.h  UpgradeLog.htm  VolcanoInfo.cpp  (+4 more)
PPPExe/: CMakeLists.txt  CalibrationTool.cpp  ContinuationOfProcessing.cpp  ContinuationOfProcessing.h  ConvolutionTool.cpp  FileInfo.cpp  FileInfo.h  MeteorologySource.h  Molecule.cpp  Molecule.h  NovacPPP.cpp  ObservatoryInfo.cpp  ObservatoryInfo.h  PlumeInScanProperty.cpp  PostProcessing.cpp  PostProcessing.h  PostProcessingStatistics.cpp  PostProcessingStatistics.h  SetupFileReader.cpp  SetupFileReader.h  StatusLogFileWriter.cpp  StatusLogFileWriter.h  StringTokenizer.cpp  StringTokenizer.h  VolcanoInfo.cpp  stdafx.h
PPPExe/Calibration/: CMakeLists.txt  PostCalibration.cpp  PostCalibration.h  PostCalibrationStatistics.cpp  PostCalibrationStatistics.h
PPPExe/Common/: CMakeLists.txt  Common.cpp  Common.h  DateTime.cpp  DateTime.h  EvaluationConfigurationParser.cpp  EvaluationConfigurationParser.h  EvaluationLogFileHandler.cpp  EvaluationLogFileHandler.h  GPSData.cpp  ProcessingFileReader.cpp  ProcessingFileReader.h  SimpleWindFileReader.cpp  SimpleWindFileReader.h  SpectrometerModel.cpp  Version.cpp  Version.h  WindFieldRecord.cpp  WindFieldRecord.h  XMLFileReader.cpp  XMLFileReader.h
PPPExe/Common/Spectra/: ScanFileHandler.cpp  ScanFileHandler.h  Spectrum.cpp  SpectrumIO.cpp  SpectrumIO.h  SpectrumInfo.cpp  SpectrumInfo.h
PPPExe/Common/SpectrumFormat/: MKPack.cpp  (+2 more)
PPPExe/Communication/: FTPServerConnection.cpp  FTPServerConnection.h
PPPExe/Configuration/: CMakeLists.txt  ConfigurationFileHandler.cpp  DarkCorrectionConfiguration.cpp  DarkCorrectionConfiguration.h  DarkSettings.cpp  EvaluationConfiguration.cpp  EvaluationConfiguration.h  InstrumentCalibrationConfiguration.h  InstrumentConfiguration.cpp  InstrumentConfiguration.h  InstrumentLocation.cpp  InstrumentLocation.h  LocationConfiguration.cpp  LocationConfiguration.h  NovacPPPConfiguration.cpp  NovacPPPConfiguration.h  UserConfiguration.cpp  UserConfiguration.h
PPPExe/Evaluation/: BasicMath.cpp  BasicMath.h  CMakeLists.txt  ColumnCorrection.cpp  ColumnCorrection.h  CrossSectionData.cpp  CrossSectionData.h  Evaluation.cpp  Evaluation.h  EvaluationResult.cpp  EvaluationResult.h  ExtendedScanResult.cpp  ExtendedScanResult.h  FitWindow.cpp  FitWindow.h  MessageLog.cpp  MessageLog.h  PostEvaluationController.cpp  PostEvaluationController.h  ReferenceFile.cpp  ReferenceFile.h  ReferenceFitResult.cpp  ReferenceFitResult.h  ScanEvaluation.cpp  ScanEvaluation.h  ScanResult.cpp  ScanResult.h
PPPExe/Filesystem/: CMakeLists.txt  Filesystem.cpp  Filesystem.h
PPPExe/Fit/: ApertureFunction.h  BSpline.cxx  BSpline.h  BSplineD.cxx  BSplineF.cxx  BandedMatrix.h  CMakeLists.txt  ConvoluteFunction.h  ConvolutionCoreFunction.h  CubicBSplineFunction.h  CubicSplineFunction.h  DOASVector.h  DataSet.h  DiscreteFunction.h  DivFunction.h  ExpFunction.h  Fit.h  FitBasic.h  FitException.h  Function.h  GaussFunction.h  LeastSquareFit.h  LevenbergMarquardtFit.h  LnFunction.h  Matrix.h  MulFunction.h  NonlinearParameterFunction.h  ParamFunction.h  ParameterVector.h  PolynomialFunction.h  ReferenceSpectrumFunction.h  StandardMetricFunction.h  SumFunction.h  Vector.h
PPPExe/Flux/: CMakeLists.txt  FluxCalculator.cpp  FluxCalculator.h  FluxResult.cpp  FluxResult.h  FluxStatistics.cpp  FluxStatistics.h
PPPExe/Geometry/: CMakeLists.txt  GeometryCalculator.cpp  GeometryCalculator.h  GeometryResult.cpp  GeometryResult.h  PlumeDataBase.cpp  PlumeDataBase.h  PlumeHeight.cpp  PlumeHeight.h
PPPExe/Meteorology/: CMakeLists.txt  WindDataBase.cpp  WindDataBase.h  WindField.cpp  WindField.h  XMLWindFileReader.cpp  XMLWindFileReader.h
PPPExe/Stratosphere/: CMakeLists.txt  StratosphereCalculator.cpp  StratosphereCalculator.h
PPPExe/WindMeasurement/: CMakeLists.txt  WindSpeedCalculator.cpp  WindSpeedCalculator.h  WindSpeedMeasSettings.cpp  WindSpeedMeasSettings.h
PPPExe/communication/: CMakeLists.txt  FTPCom.cpp  FTPCom.h  FTPServerConnection.cpp  FTPServerConnection.h  FTPSocket.cpp  FTPSocket.h  LinkStatistics.cpp
PPPLib/: CMakeLists.txt  PPPLib.vcxproj  PPPLib.vcxproj.filters  ReadMe.md
PPPLib/src/: CFileUtils.cpp  CFtpUtils.cpp  CStdioFile.cpp  CString.cpp  CStringTokenizer.cpp  ContinuationOfProcessing.cpp  DateTime.cpp  GPSData.cpp  Gps.cpp  Molecule.cpp  PostProcessingStatistics.cpp  PostProcessingUtils.cpp  SpectrometerModel.cpp  VolcanoInfo.cpp
PPPTests/: CMakeLists.txt  PPPTests.vcxproj  PPPTests.vcxproj.filters  UnitTest_CStringTokenizer.cpp
PPPTests/include/: StdOutLogger.h
PPPTests/src/: IntegrationTest_CPostEvaluationController.cpp  IntegrationTest_EvaluationLogFileHandler.cpp  IntegrationTest_EvaluationUtils.cpp  IntegrationTest_FluxCalculator.cpp  IntegrationTest_PostProcessingUtils.cpp  IntegrationTest_ScanEvaluation.cpp  IntegrationTest_ScanFileHandler.cpp  IntegrationTest_SpectrumIO.cpp  UnitTest_CArray.cpp  UnitTest_CFileUtils.cpp  UnitTest_CFtpUtils.cpp  UnitTest_CList.cpp  UnitTest_CString.cpp  UnitTest_CStringTokenizer.cpp  UnitTest_CommandLineParser.cpp  UnitTest_EvaluationConfiguration.cpp  UnitTest_EvaluationConfigurationParser.cpp  UnitTest_Filesystem.cpp  UnitTest_GeometryCalculator.cpp  UnitTest_NovacPPPConfiguration.cpp  UnitTest_PostCalibrationStatistics.cpp  UnitTest_ProcessingFileReader.cpp  UnitTest_SetupFileReader.cpp  UnitTest_XmlWindFileReader.cpp  main.cpp
(+460 files in other folders)
